JO-2007-02-05-1: Bugfix:      Changed code that prevented ARCo to run SWC 3.0
                              Removed ambiguous entries in web.xml
                 Review:      RH

JO-2007-02-05-0: Bugfix:      Save button is not enabled after ANY modification
                 Bug-Id:      6511013
                 Changed:     reporting
                 Review:      RH

RD-2007-02-01-0: Bugfix:      fixed man page creation
                 Review:      RH

PJ-2007-01-25-0: Bugfix:      sgedbwriter -debug  does not create the dbwriter.pid
                              file when suspend=y in -Xrunjdwp option
                 Bugster:     6439438
                 Changed:     dbwriter
                 Review:      RH

RD-2007-01-23-0: CVS        Created V60u10_TAG
----------------------------------------------

RH-2007-01-10-0: Bugfix:      rollback of bugfix 6506690. Did not work for
                              for postgres
                 Review:      AA

RH-2007-01-09-0: Bugfix:      reading test configuration from file did
                              not work
                 Review:      JG

AP-2007-01-03-0: Bugfix:      dbwriter should not use autocommit mode
                 Bug-Id:      6506690
                 Issue:       2139
                 Changed:     dbwriter
                 Review:      AA

AA-2006-01-02-0: Bugfix:      - broken build due to missing files in V60_ARCO_BRANCH

JO-2006-12-20-0: Bugfix:      A symbol character in table heading name causes 
                              an unexpected error
                 Bug-Id:      6469715
                 Changed:     reporting
                 Review:      RH

AA-2006-12-12-1: Cleanup      - Removed obsolete www dir in branch
AA-2006-12-12-0: Cleanup:     - Readd of repository in branch
------------------------------------------------------------------------------
AA-2006-12-08-0: Cleanup:     - branding
                              - removal of obsolete files
