@@ -91,6 +91,12 @@ ascman.host=<host for building the ascii man pages>
 catman.host=<host for building the catman pages>
 
 #
+#  Specify the MANMODE for ascman and catman.
+#  Allowed values are: ge geee sge sgeee
+#
+man.mode=ge
+
+#
 #   Deploy options
 #
 #swccontrol.home=<SWCControl source dir>
