@@ -1,3 +1,7 @@
+JO-2007-03-14-0: Bugfix:      Enhance build.xml and build.properties for building
+                              man pages
+                 Review:      RH
+
 JO-2007-02-05-1: Bugfix:      Changed code that prevented ARCo to run SWC 3.0
                               Removed ambiguous entries in web.xml
                  Review:      RH
